changed the name of my custom icon set

--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,7 @@ project('suru-icon-theme',
     default_options: ['prefix=/usr']
 )
 
-install_subdir('Suru',
+install_subdir('MikeSuru',
     install_dir: join_paths(get_option('prefix'), 'share/icons')
 )
 
